Updated to use the new API of pypgfplots.

--- a/SignalProcessing/CS/Makefile
+++ b/SignalProcessing/CS/Makefile
@@ -1,4 +1,6 @@
-IMAGES= ./figure_compressend_sensing.pdf ./figure_solution.pdf ./figure_compressend_sensing_DCT.pdf
+IMAGES= ./figure_compressend_sensing.pdf ./figure_solution.pdf \
+	./figure_compressend_sensing_DCT.pdf ./figure_measurements.pdf
+
 all : ./compressed_sensing.png ./magic_reconstruction.png  labnote.pdf labnote.html 
 	@echo "All done"
 
@@ -9,7 +11,7 @@ labnote.html : labnote.pandoc $(IMAGES)
 	~/Scripts/pandoc2html.py $<
 
 %.png : %.py 
-	python $<
+	PYTHONPATH=~/Work/GITHUB/DILAWAR/pypgfplots/ python $<
 
 %.pdf : %.tex
 	lualatex --shell-escape $<
