--- a/NeuronMorphology/Makefile
+++ b/NeuronMorphology/Makefile
@@ -1,5 +1,5 @@
-all : test
+all :
+	./swc_tool.py -i ./cells/4H-2traced-1.CNG.swc -p -im 
 
-
-test :
-	./swc_tool.py -i ./cells/15_25.CNG.swc -p -im 
+test: 
+	find . -type f -name "*.swc" | xargs -I file ./swc_tool.py -i file -p -im 
