Added first version.

--- a/MazeGenerator/Makefile
+++ b/MazeGenerator/Makefile
@@ -1,7 +1,8 @@
 all : run_example
 
-setup:
-	python3 -m pip install -r requirements.txt
+setup: requirements.txt
+	python3 -m pip install -r $< --user
 
-run_example: setup example.py
-	python3 example.py
+run_example: maze.py
+	python3 maze.py -s 20,20 --plot maze.png -o maze.txt
+	python3 maze.py -s 20,20 --show-solution --plot maze_solution.png
