each line on diferent line

--- a/MazeGenerator/Makefile
+++ b/MazeGenerator/Makefile
@@ -1,8 +1,5 @@
 all : run_example
 
-setup: requirements.txt
-	python3 -m pip install -r $< --user
-
 run_example: maze.py
-	python3 maze.py -s 20,20 --plot maze.png -o maze.txt
-	python3 maze.py -s 20,20 --show-solution --plot maze_solution.png
+	python3 maze.py -s 20,20 --plot _maze.png -o _maze.txt
+	python3 maze.py -s 20,20 --show-solution --plot _maze_solution.png
