Solve maze using smoldyn.

--- a/MazeGenerator/Makefile
+++ b/MazeGenerator/Makefile
@@ -3,3 +3,6 @@ all : run_example
 run_example: maze.py
 	python3 maze.py -s 10,10 --plot _maze.png -o _maze.txt
 	python3 maze.py -s 20,20 --show-solution --plot _maze_solution.png
+
+solve_maze: maze_solver_particles.py
+	python3 maze_solver_particles.py
